# agent-workflow-dev

./: .gitignore  CLAUDE.md  TODO.md  pyproject.toml
.ai-workflow/: config.yaml
.ai-workflow/schemas/: beads_subtask.schema.json  beads_task.schema.json  planned_pr_task.schema.json  review_finding.schema.json  story_review_summary.schema.json
.claude/agents/: fixer.md  implementer.md  reviewer.md  story-planner.md  story-reviewer.md
.claude/commands/: fix-findings.md  review-pr.md  story-plan.md  story-review.md  work-next.md
ai_workflow/: __init__.py  config.py  schema_validator.py
ai_workflow/cli/: __init__.py  bd_client.py  bd_mapping.py  bd_setup.py  bdw.py  common.py  gh_client.py  ghw.py  guards.py  sc_client.py  sc_story.py  scope_checker.py
docs/: SPECIFICATION.md  TODO.md  operations.md
docs/design/: 00-overview.md  10-story-planner.md  11-implementer.md  12-reviewer.md  13-fixer.md  14-story-reviewer.md  bd-mapping.md
docs/impl/: phase-b.md  phase-c-plan.md  phase-c.md  phase-d.md  phase-e.md  phase-f.md
tests/: conftest.py  test_bdw.py  test_branch_strategy.py  test_fixer_flow.py  test_ghw.py  test_guards.py  test_implementer_flow.py  test_mvp_flow.py  test_reviewer_flow.py  test_sc_story.py  test_schema_validation.py  test_scope_checker.py  test_story_planner_flow.py  test_story_reviewer_flow.py
tests/fixtures/: beads_subtask.valid.yaml  beads_subtask_review.valid.yaml  beads_subtask_review2.valid.yaml  beads_task.valid.yaml  fixer_output.yaml  implement_output.yaml  planned_pr_task.valid.yaml  review_finding.invalid.yaml  review_output.yaml  (+3 more)
