[project]
name = "ai-workflow"
version = "0.1.0"
description = "AI Development Workflow: Shortcut x beads x GitHub x Claude Code integration"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
